# UA-Detrac_Converter

./: CMakeLists.txt  ConvertXML.py  LICENSE  README.md
src/: main.cpp  main_bp.cpp  tracker.cpp  tracker.hpp
